--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = {extras = ["all"], version = "^0.115.12"}
 uvicorn = "^0.27.0"
 pydantic = "^2.11.3"
 pydentic = "^0.0.1.dev3"
+websockets = "^15.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.0"
